--- a/rakamin.css
+++ b/rakamin.css
@@ -360,6 +360,67 @@ nav {
     opacity: 1;
 }
 
+.kpi-frame-work{
+    margin-top: 50px;
+    color: hsl(210, 39%, 35%);
+}
+
+.kpi-flow-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 40px;
+    margin-top: 30px;
+    position: relative;
+}
+
+.flow-card {
+    position: relative;
+    background: #fff;
+    padding: 22px 20px;
+    border-radius: 20px;
+    text-align: center;
+    box-shadow:
+        0 6px 16px rgba(15, 23, 42, 0.14),
+        0 20px 40px rgba(15, 23, 42, 0.18);
+    transition: transform .3s ease, box-shadow .3s ease;
+}
+
+/* hover sama kayak KPI card */
+.flow-card:hover {
+    transform: translateY(-6px);
+}
+
+/* ARROW CONNECTOR */
+.flow-card:not(:last-child)::after {
+    content: '→';
+    position: absolute;
+    top: 50%;
+    right: -40px;
+    transform: translateY(-50%);
+    font-size: 35px;
+    font-weight: 700;
+    color: hsl(210, 39%, 35%);
+    pointer-events: none;
+}
+
+/* text */
+.flow-card h4 {
+    font-size: 15px;
+    font-weight: 600;
+    color: #0f172a;
+    margin-bottom: 6px;
+}
+
+.flow-card span {
+    font-size: 13px;
+    font-weight: 600;
+    color: hsl(210, 39%, 35%);
+}
+
+.retention{
+    margin-top: 15px;
+}
+
 /* ================= RESULT ================= */
 .result-list {
     margin-top: 16px;
@@ -387,6 +448,38 @@ nav {
     font-weight: 500;
 }
 
+
+/* Key Insight */
+.insight-list {
+    margin-top: 20px;
+    padding-left: 0;
+    list-style: none;
+}
+
+.insight-list li {
+    position: relative;
+    padding-left: 22px;
+    margin-bottom: 12px;
+    font-size: 14px;
+    line-height: 1.6;
+    color: #334155;
+}
+
+.insight-list li::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0.6em;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: hsl(210, 39%, 35%);
+}
+
+.insight-list strong {
+    color: #0f172a;
+    font-weight: 600;
+}
 /* ================= GALLERY ================= */
 /* GRID UTAMA */
 .campaign-visual-grid {
