--- a/style.css
+++ b/style.css
@@ -960,7 +960,9 @@ svg {
     padding: 36px 32px;
     border-radius: 20px;
     cursor: pointer;
-    box-shadow: 0 10px 30px rgba(15, 23, 42, 0.08);
+    box-shadow:
+  0 4px 10px rgba(15, 23, 42, 0.12),
+  0 14px 40px rgba(15, 23, 42, 0.18);
     transition: all .35s ease;
     border-top: 4px solid hsl(210, 39%, 35%);
 }
