--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ html {
     scroll-behavior: smooth;
 }
 
+a{
+    text-decoration: none;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
