--- a/noona.css
+++ b/noona.css
@@ -73,8 +73,7 @@ nav {
 .nav-links li a {
     text-decoration: none;
     color: #fff;
-    font-weight: 400;
-    font-size: 1rem;
+    font-size: 16px;
     transition: color 0.3s ease;
 }
 
