--- a/rakamin.css
+++ b/rakamin.css
@@ -1,7 +1,3 @@
-:root {
-    --navbar-height: 80px;
-}
-
 /* ================= RESET ================= */
 * {
     margin: 0;
@@ -65,7 +61,7 @@ nav {
 .nav-links li a {
     text-decoration: none;
     color: #fff;
-    font-size: 1rem;
+    font-size: 16px;
 }
 
 .nav-links a i {
