--- a/yups.css
+++ b/yups.css
@@ -394,8 +394,8 @@ nav {
 }
 
 .campaign-desc {
-    margin-top: 16px;
-    font-size: 14px;
+    margin-top: 25px;
+    font-size: 12px !important;
     line-height: 1.6;
     color: #475569;
     padding: 0 8px;
@@ -411,7 +411,7 @@ nav {
 
 .phone-mockup img {
     max-height: 100%;
-    max-width: 380px;
+    max-width: 500px;
     object-fit: contain;
 }
 
