--- a/yups.css
+++ b/yups.css
@@ -531,11 +531,6 @@ nav {
         font-size: 15px;
     }
 
-    .project-meta {
-        gap: 10px;
-        font-size: 13px;
-    }
-
     .container,
     .budget-container {
         padding: 0 18px;
@@ -584,6 +579,13 @@ nav {
         font-size: 18px;
     }
 
+    .project-meta {
+        display: flex;
+        flex-direction: column !important;
+        align-items: flex-start;
+        gap: 6px;
+    }
+
     /* Hero */
     .project-hero {
         height: 91vh;
@@ -598,11 +600,6 @@ nav {
 
     .project-subtitle {
         font-size: 15px;
-    }
-
-    .project-meta {
-        gap: 10px;
-        font-size: 13px;
     }
 
     /* Section */
