--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ nav {
     gap: 22px 30px;
     list-style: none;
     padding: 0;
-    margin-top: 25px !important;
+    margin-top: 5px !important;
     max-width: 700px;
 }
 
@@ -422,6 +422,15 @@ nav {
 .skill-item span {
     font-size: 14.5px;
     font-weight: 500;
+}
+
+.skills-hint{
+    font-size: 13px;
+    margin-top: 20px;
+    margin-bottom: 18px;
+    letter-spacing: 0.3px;
+    font-weight: 600;
+    color: hsl(210, 25%, 25%);
 }
 
 /* ================= ICON PNG ================= */
