--- a/style.css
+++ b/style.css
@@ -425,7 +425,7 @@ nav {
 }
 
 .skills-hint{
-    font-size: 13px;
+    font-size: 18px;
     margin-top: 20px;
     margin-bottom: 18px;
     letter-spacing: 0.3px;
@@ -438,7 +438,6 @@ nav {
 svg {
     fill: hsl(210, 39%, 35%);
 }
-
 
 .skill-icon {
     width: 26px;
@@ -1159,6 +1158,33 @@ svg {
     opacity: 0.9;
 }
 
+.modal-gallery {
+    width: 100%;
+    height: 220px;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-top: 14px;
+    margin-bottom: 24px;
+    background: #e5e7eb;
+}
+
+.modal-gallery img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.modal-image.logo-large{
+    text-align: center;
+    padding-top: 30px;
+}
+
+.modal-image.logo-large img{
+    width: 70%;
+    max-width: 280px;
+    margin: auto;
+    display: block;
+}
 
 /* ================= PROJECTS ================= */
 .projects-section {
